# Project_SoftDesk_v2

./: README.md  db.sqbpro  db.sqlite3  poetry_memo.txt  pyproject.toml
authentication/: models.py  permissions.py  serializers.py  validators.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_can_be_contacted_and_more.py  0003_user_client.py  0004_alter_user_can_be_contacted_and_more.py  0005_user_domain.py  0006_remove_user_domain.py
client/: models.py
client/migrations/: 0001_initial.py  0002_client_domain.py
config/: settings.py  urls.py
organization/: models.py
organization/migrations/: 0001_initial.py
support/: models.py  permissions.py  serializers.py  views.py
support/management/commands/: erase_local_dev.py  init_local_dev.py  init_local_dev_v2.py
support/migrations/: 0001_initial.py  0002_alter_comment_issue_alter_issue_project.py  0003_comment_client_issue_client_project_client_and_more.py  0004_remove_comment_client_remove_issue_client_and_more.py  0005_project_is_active.py  0006_alter_project_options_and_more.py  0007_issue_unique_issue_name_per_project.py  0008_comment_unique_comment_name_per_issue.py
